@@ -1291,3 +1291,16 @@ dh_window_search (DhWindow *window, const gchar *str)
 	dh_search_set_search_string (DH_SEARCH (priv->search), str);
 }
 
+void
+dh_window_focus_search (DhWindow *window)
+{
+	DhWindowPriv *priv;
+
+	g_return_if_fail (DH_IS_WINDOW (window));
+
+	priv = window->priv;
+
+	gtk_notebook_set_current_page (GTK_NOTEBOOK (priv->control_notebook), 1);
+
+	dh_search_grab_focus (DH_SEARCH (priv->search));
+}
