@@ -51,5 +51,6 @@ GType            dh_window_get_type        (void) G_GNUC_CONST;
 GtkWidget *      dh_window_new             (DhBase      *base);
 void             dh_window_search          (DhWindow    *window,
 					    const gchar *str);
+void		 dh_window_focus_search    (DhWindow    *window);
 
 #endif /* __DH_WINDOW_H__ */
